Feat (ContactMail) : [WIP] AddEndpoint for Contact form front
