# Map.Api/Controllers/UserController.cs
@@ -3,11 +3,13 @@ using AutoMapper;
 using FluentValidation;
 using FluentValidation.Results;
 using Map.API.Extension;
+using Map.API.MailTemplate;
 using Map.API.Models.TripDto;
 using Map.API.Models.UserDto;
 using Map.Domain.Entities;
 using Map.Domain.ErrorCodes;
 using Map.Domain.Models.AuthDto;
+using Map.Domain.Models.EmailDto;
 using Map.Platform.Interfaces;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Identity;
@@ -26,6 +28,10 @@ public class UserController : ControllerBase
     private readonly UserManager<MapUser> _userManager;
     private readonly IUserPlatform _userPlatform;
     private readonly IValidator<UpdateUserMailDto> _updateUserMailValidator;
+    private readonly IValidator<MailDto> _contactMailValidator;
+    private readonly IMailPlatform _mailPlatform;
+
+
     private readonly IMapper _mapper;
 
     #endregion
@@ -36,12 +42,16 @@ public class UserController : ControllerBase
                           UserManager<MapUser> userManager,
                           IMapper mapper,
                           IValidator<UpdateUserMailDto> updateUserMailValidator,
-                          IUserPlatform userPlatform)
+                          IUserPlatform userPlatform,
+                          IValidator<MailDto> contactMailValidator,
+                          IMailPlatform mailPlatform)
     {
         _userManager = userManager ?? throw new ArgumentNullException(nameof(userManager));
         _mapper = mapper ?? throw new ArgumentNullException(nameof(mapper));
         _updateUserMailValidator = updateUserMailValidator ?? throw new ArgumentNullException(nameof(updateUserMailValidator));
         _userPlatform = userPlatform ?? throw new ArgumentNullException(nameof(userPlatform));
+        _contactMailValidator = contactMailValidator ?? throw new ArgumentNullException(nameof(contactMailValidator));
+        _mailPlatform = mailPlatform ?? throw new ArgumentNullException(nameof(mailPlatform));
     }
 
     #endregion
@@ -80,4 +90,30 @@ public class UserController : ControllerBase
         return Ok(_mapper.Map<MapUser, MapUserDto>(user));
     }
 
+    [HttpPatch]
+    [Route("Contact")]
+    [MapToApiVersion(ApiControllerVersions.V1)]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(ICollection<Error>), StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(typeof(Error), StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(typeof(Error), StatusCodes.Status500InternalServerError)]
+    public async Task<ActionResult> ContactMailAsync([FromBody] MailDto mailDto)
+    {
+        ValidationResult validationResult = _contactMailValidator.Validate(mailDto);
+        if (!validationResult.IsValid)
+            return BadRequest(validationResult.Errors.Select(e => new Error(e.ErrorCode, e.ErrorMessage)));
+
+        string contactMailTemplate = _mailPlatform.GetTemplate(TemplatesName.ContactMail);
+
+        mailDto.Body = contactMailTemplate.Replace("[Name]", mailDto.Name)
+                                          .Replace("[Email]", mailDto.Email)
+                                          .Replace("[Subject]", mailDto.Subject)
+                                          .Replace("[Body]", mailDto.Body);
+
+        mailDto.Subject = $"Nouvelle demande de contact de la part de : {mailDto.Name}";
+
+        await _mailPlatform.SendMailAsync(mailDto);
+
+        return Ok();
+    }
 }
